<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username:</string>
    <string name="user_hint">Please enter your username</string>
    <string name="submit">SUBMIT</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm_text">Confirm Password:</string>
    <string name="Confirm_hint">Please confirm your password</string>
    <string name="random">random</string>
</resources>
